# AIOT-HW1

./: .gitignore  0_devlog.md  Dockerfile  README.md  VENV_GUIDE.md  app.py  build_prompt.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  setup_linux.sh  setup_windows.bat
scripts/: run.bat  run_in_venv.bat  run_in_venv.sh  setup_venv.bat  setup_venv.sh
scripts/linux/: run.sh  run_in_venv.sh  setup_venv.sh
scripts/tests/: quick_test.py  test_app.py  test_lines.py
scripts/windows/: run.bat  run_in_venv.bat  setup_venv.bat
